--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
               <div class="mb-3 mx-4">
                 <label for="inputUtente" class="form-text">Prodotto da acquistare</label>
                 <input type="text" class="form-control" id="inputUtente" aria-describedby="inputlista">
-                <div id="emailHelp" class="form-text"><input class="btn btn-primary" type="button" value="Inserisci" onclick="aggiungi()"></div>
+                
+                <div id="emailHelp" class="form-text">
+                  <input class="btn btn-primary" type="button" value="Inserisci" onclick="aggiungi()">
+                </div>
               </div>
 
 
@@ -35,9 +38,9 @@
 
             <input class="btn btn-primary" type="button" value="Stampa" onclick="stampa()">
             <ul class="list-group list-group-flush mx-4" id="lista">
-              
+              <!--
               <li class="list-group-item">An item <button type="button" class="btn btn-primary btn-sm" id="cancel">Cancel</button></li>
-
+              -->
               <!--
               <li class="list-group-item">A second item</li>
               <li class="list-group-item">A third item</li>
